[fix]: Flex wrap at section `Jornada` [fix]: Image size at section `Jornada` (1660px)

--- a/style.css
+++ b/style.css
@@ -687,25 +687,27 @@ nav a {
 .global {
     padding-right: 10px;
 }
-
+.global img {
+    width: 60px;
+}
 .title_global {
     display: flex;
     flex-direction: column;
-    max-width: 290px;
+    max-width: 180px;
     width: 100%;
 }
 
 .title_global h2 {
     color: var(--color-cinza);
     margin: 0px;
-    font-size: 26px;
+    font-size: 22px;
     margin-bottom: 10px;
     text-transform: uppercase;
 }
 
 .text_pilar p {
     color: var(--color-cinza-escuro);
-    font-size: 20px;
+    font-size: 18px;
     margin: 0px;
     font-family: var(--font-light);
 }
@@ -2909,6 +2911,10 @@ footer img {
 @media (max-width: 1660px) {
     .img_side_nossas_pessoas {
         width: 450px;
+    }
+    .img_side_jornada{
+        height: 450px;
+        top: 25px;
     }
 }
 
